Fixed z-index for settings

--- a/website-assets/scss/monitor.scss
+++ b/website-assets/scss/monitor.scss
@@ -7,6 +7,7 @@
 	min-height: $monitor-width;
 	margin: 0 auto;
 	overflow: visible;
+	z-index: -1;
 	h1 {
 		text-align: center;
 		font-size: 32px;
