--- a/website-assets/scss/styles.scss
+++ b/website-assets/scss/styles.scss
@@ -23,6 +23,7 @@ body {
 	position: relative;
 	display: block;
 	overflow: auto;
+	z-index: 1;
 }
 
 .screen {
